# xess-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs
src/xefg_swapchain/: swapchain.rs
src/xell/: dx12.rs  mod.rs  xell.rs  xell_d3d12.rs
src/xess/: dx12.rs  mod.rs  vk.rs  xess.rs  xess_d3d11.rs  xess_d3d12.rs  xess_d3d12_include.h  xess_vk.rs
src/xess_fg/: dx12.rs  mod.rs  swapchain.rs  xefg_swapchain.rs  xefg_swapchain_d3d12.rs
sys/: Cargo.toml
sys/src/: lib.rs
sys/src/xefg_swapchain/: dx12.rs  mod.rs  swapchain.rs
sys/src/xell/: dx12.rs
sys/src/xess/: dx11.rs  dx12.rs  xess.rs
xess-lib/: Cargo.toml
xess-lib/src/: lib.rs
