[package]
name = "xess-sys"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/xess-rs"
description = "Raw bindings to XeSS"
include = ["src", "LICENSE"]
categories = []                                               # https://crates.io/category_slugs
keywords = []
rust-version = "1.74"

# Headers contain a sequence of characters which are incorrectly interpreted as a doctest, these obviously fail 
[lib]
doctest = false

[dependencies]
ash = { version = "0.38", default-features = false, optional = true }
libloading = { version = "0.8", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, features = [
    "Win32_Graphics_Dxgi_Common",
], optional = true }

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
default = ["vk", "xess"]
generate-bindings = ["dep:bindgen"]
dx11 = ["dep:windows", "windows?/Win32_Graphics_Direct3D11"]
dx12 = ["dep:windows", "windows?/Win32_Graphics_Direct3D12"]
vk = ["dep:ash"]
xell = []
xess = []
xess_fg = []
