[package]
name = "xess-sys"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/xess-rs"
description = "Raw bindings to XeSS"
include = ["src", "LICENSE"]
categories = ["external-ffi-bindings", "graphics", "rendering"]
keywords = ["Intel", "XeSS", "XeLL", "frame generation", "upscaling"]
rust-version = "1.74"

# Headers contain a sequence of characters which are incorrectly interpreted as a doctest, these obviously fail 
[lib]
doctest = false

[dependencies]
ash = { version = "0.38", default-features = false, optional = true }
libloading = { version = "0.9", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, optional = true }

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
default = ["vk", "dx12", "xess"]
generate-bindings = ["dep:bindgen"]
dx11 = []
dx12 = []
vk = ["dep:ash"]
xell = ["dx12"]
xess = []
xefg_swapchain = ["dx12", "windows/Win32_Graphics_Dxgi_Common", "windows/Win32_Graphics_Direct3D12"]
