[package]
name = "xess-lib"
version = "0.1.0+2.1.0"
edition = "2024"
license-file = "license.txt"
license = "MIT"
authors = ["Traverse Research <support@traverseresearch.nl>"]
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/xess-rs"
description = "Precompiled libraries for Intel XeSS"
